# mdm-prj-plnr

./: .gitignore  .pre-commit-config.yaml  README.md  copilot.yml  project_config.ini  pyproject.toml  requirements.txt
src/: config.py  database.py  main_app.py
src/tabs/: tab_daily_runner.py  tab_project_selection.py  tab_project_setup.py  tab_properties.py  tab_view_logs.py
src/utils/: main_helper.py
